# Dexmal

./: .gitignore
airbot/5.1.6/airbot_py-5.1.6-py3-none-any/airbot_py-5.1.6.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
airbot/airbot_api/: setup.py  start.sh  test.py
airbot/airbot_api/airbot_sdk/: AGV.py  Airbot.py  record_server.py
airbot/airbot_api/airbot_sdk/configs/: config.py
airbot/airbot_api/airbot_sdk/utils/: video_util.py
airbot/airbot_api/descriptions/airbot_urdf/play_g2/: CMakeLists.txt  package.xml
airbot/airbot_api/descriptions/airbot_urdf/play_g2/launch/: view_robot.launch
airbot/airbot_api/descriptions/airbot_urdf/replay/: package.xml
airbot/airbot_api/descriptions/airbot_urdf/replay/launch/: view_robot.launch
airbot/airbot_api/descriptions/airbot_urdf/replay/meshes/: e2_gear_Link.STL  e2_left_Link.STL  e2_right_Link.STL  link1.STL  link2.STL
airbot/setup_mysql/: config.env  init.sql  init_processed.sql  install_mysql.sh
airbot/setup_mysql/migrations/: template.sql
dagger_data_collection/: config.py  data_collection.py  meta_template.json  readme.md  video_util.py
dagger_data_collection/static/ui/: index.html  robot.urdf
dagger_data_collection/static/ui/assets/: index-B9ifOD5d.js  index-DD_yH-Zc.js  index-DU-9SOEo.js  index-DtIibXhH.js  index-EERCrxKT.js  index-FRgIO1_1.js  index-x6VzJFkA.js
dagger_data_collection/static/ui/dos-w1/: CMakeLists.txt
dagger_data_collection/static/ui/dos-w1/config/: view_robot.rviz
dagger_data_collection/static/ui/dos-w1/meshes/: link3.STL  (+5 more)
data_collection/: PEDAL_EPISODE_FLOW_CHANGES.md  README.md  config.py  convert_to_lerobot.py  main.py  meta_template.json  repair_lerobot_tasks.py  start_wired.sh  test_task_follow.py  video_util.py
data_collection/fold_towel/: README.md  config.py  main.py  meta_template.json
deploy/: REAL_ROBOT_EVAL.md  simple_openpi_client.py
(+1 files in other folders)
