<?xml version="1.0"?>
<package format="2">
  <name>replay</name>
  <version>1.0.0</version>
  <description>Combined robot URDF package for ROS1</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz</depend>

  <export>
  </export>
</package>
